# ImGUITemplate

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ImGuiTemplate.sln  ImGuiTemplate.vcxproj  ImGuiTemplate.vcxproj.filters  Readme.md
data/shaders/: display.frag  display.vert
src/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  main  main.cpp  renderer.cpp  renderer.h  test.cpp
src/Class/: Hello.cpp  Hello.h
